# agent-toolbox

./: .gitignore  AndroidManifest.xml  BUILD_ENV_ADAPTATION.md  DEBUG_GUIDE.md  FIX_SUMMARY.md  JSON_TIMEOUT_FIX.md  README.md  build.gradle  build.gradle.kts  gradle.properties  proguard-rules.pro  project.properties  settings.gradle  settings.gradle.kts  问题.txt
.github/workflows/: build.yml
assets/: system_prompt_template.json  test_client.html
assets/python/: git_bridge.py
assets/skills/agent-toolbox/: SKILL.md
assets/skills/agent-toolbox/references/: conventions.md
assets/skills/demo-echo/: SKILL.md  tools.json
assets/skills/demo-echo/scripts/: echo.py
assets/skills/git-skill/: SKILL.md
assets/skills/plan-todo/: SKILL.md
res/drawable/: chip_off.xml  chip_on.xml
res/layout/: activity_deepseek.xml  activity_main.xml
skills/: SKILL.md
skills/references/: conventions.md
src/com/example/agenttoolbox/: DeepSeekActivity.java  DeepSeekChatBridge.java  JavaScriptBridge.java  MainActivity.java
src/com/example/agenttoolbox/gm/: LuaEngine.java  MemoryEngine.java  MemoryFreezer.java  ProcessManager.java
src/com/example/agenttoolbox/mcp/: McpServer.java
src/com/example/agenttoolbox/tools/: AobSearchTool.java  AttachProcessTool.java  CmdTool.java  FileListTool.java  FileReadTool.java  FileWriteTool.java  HttpRequestTool.java  LuaExecuteTool.java  MathCalculatorTool.java  MemoryFreezeTool.java  MemoryReadTool.java  MemorySearchTool.java  MemoryWriteTool.java  ProcessRunner.java  (+8 more)
src/main/c/: CMakeLists.txt  python_bridge.c
tools/: build_static_git.sh
(+31 files in other folders)
